# se3-force-transformer

./: .gitignore  AGENTS.md  GOAL.md  LICENSE  MOLECULAR_DATA.md  README.md  SCALEUP.md  SCIENTIFIC_DEMO.md  pyproject.toml
configs/: ablation_lmax0.yaml  ablation_lmax1.yaml  ablation_lmax2.yaml  ablation_lmax3.yaml  ablation_no_attention.yaml  ablation_no_gate.yaml  angular_force_se3_l2.yaml  angular_force_se3_l2_small.yaml  angular_force_se3_l3.yaml  baseline_egnn.yaml  baseline_egnn_matched_params.yaml  baseline_mlp.yaml  baseline_tfn.yaml  baseline_vanilla_gt.yaml  central_force_se3_l2.yaml  small_cpu.yaml
scripts/: blender_visualization_common.py  demo_energy_drift.py  demo_force_field_visualization.py  demo_md_rollout.py  demo_structure_relaxation.py  eval_equivariance.py  evaluate.py  evaluate_molecular.py  export_visualization_sample.py  inspect_irreps.py  inspect_molecular_dataset.py  make_force_diagnostic_report.py  make_force_learning_report.py  make_global_context_report.py  make_global_vs_local_report.py  make_molecular_real_report.py  make_molecular_report.py  make_research_report.py  make_scaleup_report.py  make_visualization_storyboard.py  plot_benchmark_results.py  plot_force_diagnostics.py  plot_force_learning_results.py  plot_global_context_results.py  plot_global_vs_local_results.py  plot_molecular_real_results.py  plot_molecular_results.py  render_blender_equivariance_cinematic.py  render_blender_equivariance_demo.py  render_blender_force_cinematic.py  render_blender_force_scene.py  render_blender_model_comparison.py  run_ablation_grid.py  (+13 more)
(+159 files in other folders)
